# crapstack

./: .gitignore  faiss_document_store.db  pyproject.toml  requirements.txt  setup.py  test.ipynb
crapstack/document_stores/: __init__.py  base.py  faiss.py  filter_utils.py  search_engine.py  sql.py  utils.py
crapstack/haystack/: __init__.py  errors.py
crapstack/haystack/modeling/: infer.py  utils.py
crapstack/haystack/modeling/data_handler/: data_silo.py  dataloader.py  dataset.py  processor.py  samples.py
crapstack/haystack/modeling/evaluation/: __init__.py  eval.py  metrics.py
crapstack/haystack/modeling/model/: adaptive_model.py  biadaptive_model.py  feature_extraction.py  language_model.py  optimization.py  prediction_head.py  triadaptive_model.py
crapstack/haystack/modeling/training/: __init__.py  base.py
crapstack/haystack/nodes/: _json_schema.py  base.py
crapstack/haystack/nodes/answer_generator/: __init__.py  base.py  transformers.py
crapstack/haystack/nodes/file_converter/: __init__.py  azure.py  base.py  csv.py  docx.py  image.py  json.py  markdown.py  parsr.py  pdf.py  pdf_ocr.py  tika.py  txt.py
crapstack/haystack/nodes/other/: __init__.py  docs2answers.py  document_merger.py  join.py  join_answers.py  join_docs.py  route_documents.py  shaper.py
crapstack/haystack/nodes/preprocessor/: __init__.py  base.py  preprocessor.py
crapstack/haystack/pipelines/: __init__.py  base.py  config.py  standard_pipelines.py  utils.py
crapstack/haystack/utils/: __init__.py  experiment_tracking.py  import_utils.py  labels.py  reflection.py
(+12 files in other folders)
