[project]
name = "crapstack"
dynamic = [
  "version",
]
description = "crappier haystack"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    'transformers[torch]==4.25.1',
    'tika',
    'fitz',
    'mmh3',
    'pydantic',
    "faiss-cpu==1.7.2",
    'sqlalchemy',
    'nltk',
    'more-itertools',
    'sentence-transformers',
    'dill',
    'seqeval',
    'jsonschema',
    'quantulum3',
    'langdetect',
    'python-docx',
    "azure-ai-formrecognizer>=3.2.0b2",
    "sqlalchemy>=1.4.2,<2",
    "sqlalchemy_utils",
]

    
    